# kokkos-resilience

dependencies/: CMakeLists.txt  Readme.md
dependencies/cmake/: build_axl.cmake  build_dependencies.cmake  build_er.cmake  build_kvtree.cmake  build_rankstr.cmake  build_redset.cmake  build_shuffile.cmake  build_veloc.cmake  modulefile.in  modulefiles.cmake
